salesforce/force-app/main/default/objects/ForensicScan__c/ForensicScan__c.object-meta.xml
<CustomObject>
    <description>One row per scan run. Findings + traces + recoveries hang off it.</description>
    <label>Forensic Scan</label>
    <nameField>
        <displayFormat>FS-{0000}</displayFormat>
        <label>Forensic Scan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forensic Scans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>