salesforce/force-app/main/default/objects/ForensicScan__c/fields/CategoryScoresJson__c.field-meta.xml
<CustomField>
    <fullName>CategoryScoresJson__c</fullName>
    <label>Category Scores JSON</label>
    <description>Serialized JSON map of category name to 0-100 score, computed by HealthScoreCalculator on scan completion using Vercel-style bucket weights. Read by DashboardController for the per-category UI.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>