salesforce/force-app/main/default/objects/ForensicScan__c/fields/ConnectedOrg__c.field-meta.xml
<CustomField>
    <fullName>ConnectedOrg__c</fullName>
    <label>Connected Org</label>
    <description>Set when this scan targeted a remote org via Named Credential. Null = scanned the home org locally.</description>
    <referenceTo>ConnectedOrg__c</referenceTo>
    <relationshipLabel>Forensic Scans</relationshipLabel>
    <relationshipName>ForensicScans</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>