salesforce/force-app/main/default/objects/ForensicScan__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>Error Message</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>