salesforce/force-app/main/default/objects/ForensicScan__c/fields/FindingCount__c.field-meta.xml
<CustomField>
    <fullName>FindingCount__c</fullName>
    <label>Finding Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>