salesforce/force-app/main/default/objects/ForensicScan__c/fields/HealthScore__c.field-meta.xml
<CustomField>
    <fullName>HealthScore__c</fullName>
    <label>Health Score</label>
    <description>0-100 computed score derived from finding severity counts via ScoreFormula__mdt weights.</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>