salesforce/force-app/main/default/objects/ForensicScan__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Product Type</label>
    <description>Which Salesforce Revenue Cloud products the scanned org runs. Phase 27 — converted from single Picklist to MultiselectPicklist to mirror ConnectedOrg__c.ProductType__c: an org can run CPQ + Billing + ARM at once, and the scan must record the same token set it gated on. Previously a Billing-only org produced 'Billing', which was absent from this value set and threw INVALID_OR_NULL_FOR_RESTRICTED_PICKLIST on insert.</description>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>CPQ+Billing</fullName>
                <label>CPQ + Billing</label>
            </value>
            <value>
                <fullName>ARM</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <label>None (no Revenue Cloud installed)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>