salesforce/force-app/main/default/objects/ForensicScan__c/fields/ResolvedCount__c.field-meta.xml
<CustomField>
    <fullName>ResolvedCount__c</fullName>
    <label>Resolved Count</label>
    <description>How many findings from this scan have been marked Resolved. Drives the Resolution Progress bar.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>