salesforce/force-app/main/default/objects/ForensicScan__c/fields/TotalLeakageUsd__c.field-meta.xml
<CustomField>
    <fullName>TotalLeakageUsd__c</fullName>
    <label>Total Leakage USD</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>